issue-tracker-project/local/additional/kubectl-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubectl-proxy
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
  selector:
    app: kubectl-proxy
