issue-tracker-project/local/additional/grafana-ingress-with-apis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  labels:
    app.kubernetes.io/managed-by: tilt
spec:
  rules:
  - host: grafana.k3d.localhost
    http:
      paths:
      - path: /apis
        pathType: Prefix
        backend:
          service:
            name: kubectl-proxy
            port:
              number: 8001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
